# apply_conditionally

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: into_either.rs  lib.rs
